test/invalid/baseline/maplike-args.txt
Syntax error at line 2 in maplike-args.webidl, since `interface X`:
<DOMString, ByteString>();
                       ^ Arguments are only allowed for `async iterable`
